--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ quarkus.smallrye-openapi.info-title="Dev-Backend"
 # quarkus.datasource.username = myusername
 # quarkus.datasource.password = mypassword
 # quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/mydatabase
+
+# Disable CORS to accept requests from any domain
+quarkus.http.cors=false
