implemented AppUser APIs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@
 quarkus.smallrye-openapi.info-title="Dev-Backend"
 
 # datasource config
-# quarkus.datasource.username = myusername
-# quarkus.datasource.password = mypassword
-# quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/mydatabase
+quarkus.datasource.db-kind=h2
+quarkus.datasource.jdbc.url=jdbc:h2:mem:dev
+quarkus.datasource.username=admin
+quarkus.datasource.password=admin
+quarkus.hibernate-orm.database.generation=drop-and-create
 
 # Disable CORS to accept requests from any domain
 quarkus.http.cors=false
