--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@ quarkus.smallrye-openapi.info-title="Dev-Backend"
 
 # datasource config
 quarkus.datasource.db-kind=h2
-quarkus.datasource.jdbc.url=jdbc:h2:mem:dev
+quarkus.datasource.jdbc.url=jdbc:h2:mem:dev;DB_CLOSE_DELAY=-1
 quarkus.datasource.username=admin
 quarkus.datasource.password=admin
 quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.sql-load-script=import.sql
 
 # Disable CORS to accept requests from any domain
 quarkus.http.cors=false
