transform blocking endpoints to reactive ones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 # Swagger-UI config
 quarkus.smallrye-openapi.info-title="Dev-Backend"
 
-# datasource config
-quarkus.datasource.db-kind=h2
-quarkus.datasource.jdbc.url=jdbc:h2:mem:dev;DB_CLOSE_DELAY=-1
+# Datasource configuration
+quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=admin
 quarkus.datasource.password=admin
+
+# Reactive datasource configuration
+# Run postgres locally: docker run -it --rm --name postgres -e POSTGRES_USER=admin -e POSTGRES_PASSWORD=admin -e POSTGRES_DB=dev -p 5433:5432 postgres:13.3
+%dev.quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5433/dev
+
+# Hibernate ORM configuration
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=import.sql
 
