CORS and TLS config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,20 @@ quarkus.datasource.password=admin
 
 # Reactive datasource configuration
 # Run postgres locally: docker run -it --rm --name postgres -e POSTGRES_USER=admin -e POSTGRES_PASSWORD=admin -e POSTGRES_DB=dev -p 5433:5432 postgres:13.3
-%dev.quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5433/dev
+quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5433/dev
 
 # Hibernate ORM configuration
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=import.sql
 
-# Disable CORS to accept requests from any domain
-quarkus.http.cors=false
+# CORS: Adjust to your situation
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://example.com,http://localhost:8080
+quarkus.http.cors.methods=GET,POST,PUT,DELETE
+
+# TLS
+# quarkus.http.ssl.certificate.key-store-file=/path/to/myapp.keystore
+# quarkus.http.ssl.certificate.key-store-password=mypass
+# quarkus.http.ssl-port=8443
+# quarkus.http.ssl.certificate.key-store-file-type=[one of JKS, JCEKS, P12, PKCS12, PFX]
+# quarkus.http.insecure-requests=redirect
