(wip) devservice postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,19 @@ quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 # Swagger-UI config
 quarkus.smallrye-openapi.info-title="Dev-Backend"
 
+# Dev Services
+quarkus.datasource.devservices.enabled = true
+
 # Datasource configuration
+# docker run -d --name postgres -e POSTGRES_USER=quarkus -e POSTGRES_PASSWORD=quarkus -e POSTGRES_DB=quarkus -p 5433:5432 postgres:13.3
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=admin
-quarkus.datasource.password=admin
+quarkus.datasource.username=quarkus
+quarkus.datasource.password=quarkus
 
 # Reactive datasource configuration
-# Run postgres locally: docker run -it --rm --name postgres -e POSTGRES_USER=admin -e POSTGRES_PASSWORD=admin -e POSTGRES_DB=dev -p 5433:5432 postgres:13.3
-quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5433/dev
+%dev.quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5433/quarkus
+# %prod.quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5433/prod
+# %test.quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5433/test
 
 # Hibernate ORM configuration
 quarkus.hibernate-orm.database.generation=drop-and-create
