wip profiles dev / test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,22 +6,26 @@ quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.smallrye-openapi.info-title="Dev-Backend"
 
 # Dev Services
-quarkus.datasource.devservices.enabled = true
+# quarkus.datasource.devservices.enabled = true
+quarkus.datasource.devservices.enabled = false
 
 # Datasource configuration
 # docker run -d --name postgres -e POSTGRES_USER=quarkus -e POSTGRES_PASSWORD=quarkus -e POSTGRES_DB=quarkus -p 5433:5432 postgres:13.3
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=quarkus
-quarkus.datasource.password=quarkus
+%dev.quarkus.datasource.username=quarkus
+%dev.quarkus.datasource.password=quarkus
+%test.quarkus.datasource.username=quarkus
+%test.quarkus.datasource.password=quarkus
+
 
 # Reactive datasource configuration
 %dev.quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5433/quarkus
-# %prod.quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5433/prod
-# %test.quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5433/test
+%test.quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5433/quarkus
+# %prod.quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5432/prod
 
 # Hibernate ORM configuration
 quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.sql-load-script=import.sql
+%dev.quarkus.hibernate-orm.sql-load-script=import.sql
 
 # CORS: Adjust to your situation
 quarkus.http.cors=true
